# ferro-dactyl

./: .gitmodules  Cargo.toml  LICENSE-MIT  README.md  flash.cfg  flash.sh  memory.x
.cargo/: config
freecad/: base.FCStd
kicad/: ferro-dactyl-cache.lib  ferro-dactyl.kicad_pcb  ferro-dactyl.net  ferro-dactyl.pro  ferro-dactyl.sch  sym-lib-table
layout/: Dactyl-Manuform-5x6.kbd.json
src/: layout.rs  main.rs
stl/: base.stl  left.stl  right.stl
