[package]
name = "ferro-dactyl"
version = "0.2.0"
authors = ["Sebastian Woetzel <wose@zuendmasse.de>"]
edition = "2021"


[dependencies]
cortex-m = "0.7.5"
cortex-m-rt = { version = "0.7.1", features = ["device"] }
cortex-m-semihosting = "*"
cortex-m-rtic = "1.1.2"
embedded-hal = "0.2.7"
keyberon = { git = "https://github.com/TeXitoi/keyberon", rev = "c0d35b53f875e8539348be0d1a713a3b670d5747" }
nb = "1.0.0"
panic-halt = "0.2.0"
smart-leds = "0.3.0"
stm32f4xx-hal = { version = "0.13.2", features = ["rt", "stm32f411", "usb_fs", "rtic"] }
usb-device = "0.2.8"
ws2812-spi = "0.4.0"

[profile.dev]
opt-level = 3
overflow-checks = true
debug = 2
debug-assertions = true
incremental = false

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = true
overflow-checks = false
